<resources>
    <string name="app_name">DooAnne</string>
    <string name="decks">Bộ bài</string>
    <string name="explore">Khám phá</string>
    <string name="me">Mình</string>
    <string name="settings">Cài đặt</string>
    <string name="upgrade">Nâng cấp</string>
    <string name="nothing">nothing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pass">BỎ QUA</string>
    <string name="correct">CHÍNH XÁC</string>
    <string name="create_new_deck">Tạo bộ mới</string>
    <string name="favorite">Yêu thích</string>
    <string name="create">Sáng tạo</string>
    <string name="please_describe">Mô tả bộ bài và cách chơi</string>
    <string name="description">Mô tả</string>
    <string name="deck_name">Tên bộ</string>
    <string name="please_name">Đặt tên cho bộ bài của bạn</string>
    <string name="custom_deck_text">Hãy sáng tạo những bộ bài mới cho riêng minh!</string>
    <string name="icon">Biểu tượng</string>
    <string name="color">Màu sắc</string>
    <string name="word_list">Danh sách từ</string>
    <string name="add_word">Thêm từ</string>
    <string name="add_word_please">Thêm từ vào bộ</string>
    <string name="Vietnamese">Thuần Việt</string>
    <string name="all_decks">Tất cả</string>
    <string name="international">Quốc tế</string>
    <string name="vietnamese_decks">Thuần Việt</string>
</resources>