<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/deckFragment"
        android:enabled="true"
        android:icon="@drawable/deck_selector"
        android:title="@string/decks"/>
    <item
        android:id="@+id/favoriteFragment"
        android:enabled="true"
        android:icon="@drawable/favorite_selector"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/createFragment"
        android:enabled="true"
        android:icon="@drawable/create_selector"
        android:title="@string/create"/>
    <item
        android:id="@+id/meFragment"
        android:enabled="true"
        android:icon="@drawable/me_selector"
        android:title="@string/me"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/settings_selector"
        android:title="@string/settings"/>

</menu>